Updated theme, photo, and fixed overflow

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@ body {
     'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow: hidden;
 }
 
 code {
@@ -13,6 +14,5 @@ code {
 html,
 body,
 #root {
-  /* min-height: 100%; */
-  height: 100%;
+  min-height: 100vh;
 }
